# smart_home

./: .gitignore  README.md  TODO.md  Timer.py  UDP_sync.py  WLED_wrapper.py  app.py  bulb_wrapper.py  extra_types.py  global_vars.py  globals.py  lighting_routines.py  main.py  objects.yaml  periodic_tasks.py  pyproject.toml  start.sh  test.py  test_bulb_wrapper.py  test_curl.sh  tester.py  testing.ipynb  todo.md  toggle_visitor.py  update.sh  utils.py  wizlight.py
WLED_backup/: backup_cfg.py  cfg.json  presets.json
cli/: bulb.py
fairy_lights/Fairy Lights/: platformio.ini
fairy_lights/Fairy Lights/src/: main.cpp
scripts/: start_server.sh
tests/: misc_tests.py  test_UDP_sync.py  test_bulb_wrapper.py  test_utils.py  test_wrapper.py
utils/: conversions.py  get_logger.py  json_wrapper.py  misc.py
wrappers/: WLED_wrapper.py  all.py  base.py  bulb_wrapper.py
