[project]
name = "smart-home"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.1",
    "astral>=3.2",
    "colour>=0.1.5",
    "flask>=3.1.2",
    "hypercorn>=0.17.3",
    "ipykernel>=7.1.0",
    "pywizlight>=0.6.3",
    "pyyaml>=6.0.3",
    "types-pyyaml>=6.0.12.20250915",
]

[dependency-groups]
dev = [
    "ruff>=0.14.3",
]

[tool.ruff.lint]
extend-select = [
    "BLE",  # Blind exceptions
    "FBT",  # Boolean trap
    "A",    # Builtin shadowing
    "C4",   # Comprehensions
    "LOG",  # Logging
    "G",    # Logging formatting
    "PT",   # Pytest
    "SIM",  # Simplifications
    "TID",  # Tidy imports
    "PTH",  # Use Pathlib instead of os.path etc
    "I",    # isort
    "C901", # flake8-c901 complexity
]

extend-ignore = [
    "PTH123" # allow `open()`
]
