[project]
name = "smart-home"
version = "0.4.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.13.4",
    "pyfracturedjson>=2.2.0",
    "apscheduler>=3.11.3",
    "astral>=3.2",
    "colour>=0.1.5",
    "flask[async]>=3.1.3",
    "hypercorn>=0.18.0",
    "ipykernel>=7.3.0",
    "pytest>=9.1.1",
    "pywizlight>=0.6.4",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "humanize>=4.16.0",
]

[project.scripts]
bulb = "smart_home.cli.bulb:bulb"


[dependency-groups]
dev = [
    "pytest-asyncio>=1.4.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.20",
    "types-pyyaml>=6.0.12.20260518",
    "responses>=0.26.2",
    "pytest-cov>=7.1.0",
]

[tool.ruff.lint]
extend-select = [
    "BLE",  # Blind exceptions
    "FBT",  # Boolean trap
    "A",    # Builtin shadowing
    "C4",   # Comprehensions
    "LOG",  # Logging
    "G",    # Logging formatting
    "PT",   # Pytest
    "SIM",  # Simplifications
    "TID",  # Tidy imports
    "PTH",  # Use Pathlib instead of os.path etc
    "I",    # isort
    "C901", # flake8-c901 complexity
]

extend-ignore = [
    "PTH123" # allow `open()`
]
